# tempit

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: push_to_main.yml  pypi_release.yml
examples/: examples copy.py  examples.py  main.py
simple_timeit_decorator/: __init__.py  core.py  timeit.py  utils.py
tempit/: __init__.py  core.py  utils.py
tests/: test_tempit.py  test_tempit_deactivated.py  test_timeit.py  test_utils.py
